Adicionando alguns inputs para fltrar o carro

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="content">
         <nav>
-          <p class="brand">SaleCar by Arthur</p>
+          <p class="brand">SaleCar</p>
           <ul>
             <li><a href="#catalog">Catalog</a></li>
             <li><a href="#about">About</a></li>
@@ -42,6 +42,16 @@
             type="text"
             class="search-input"
             placeholder="Choose your favorite model"
+          />
+          <input
+            type="text"
+            class="search-input"
+            placeholder="Choose your location"
+          />
+          <input
+            type="text"
+            class="search-input2"
+            placeholder="Choose the model year"
           />
           <button class="search-button">Search</button>
         </div>
